[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-py"
version = "0.1.0"
description = "A thread-safe, asynchronous observability toolkit for Python."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "amadhusudan", email = "your-email@example.com"}
]
dependencies = [
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy"
]

